<resources>
    <string name="app_name">crypto Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1h">1h</string>
    <string name="_15m">15m</string>
    <string name="_1m">1M</string>
    <string name="_1w">1w</string>
    <string name="_1d">1d</string>
    <string name="_4h">4h</string>
</resources>