<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:background="@color/olive_green"
    tools:context=".ui.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="12dp"

        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/addWatchlistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_star_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backStackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_back_stack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailSymbolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addWatchlistButton"
            app:layout_constraintStart_toEndOf="@+id/backStackButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="BTC" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailAppbar">

        <TextView
            android:id="@+id/detailChangeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/detailChangeImageView"
            app:layout_constraintTop_toBottomOf="@+id/detailPriceTextView"
            tools:text="2.68%" />

        <TextView
            android:id="@+id/detailPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/detailImageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$108.56" />

        <ImageView
            android:id="@+id/detailChangeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/detailChangeTextView"
            app:layout_constraintStart_toStartOf="@+id/detailPriceTextView"
            app:layout_constraintTop_toTopOf="@+id/detailChangeTextView"
            tools:srcCompat="@drawable/ic_caret_up" />

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_15m"
            android:layout_width="0dp"
            android:text="@string/_15m"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1hr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1h"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_4hr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_4h"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1D"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1d"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1W"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1w"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1M"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/_1m"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <WebView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
